fix: links in emails added https://

--- a/project/blueprints/reisesteine/templates/reisesteine/email/stone_published.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/email/stone_published.html
@@ -1,6 +1,6 @@
 {{_('Liebe/r Reisefreund/in')}}
 <br/><br/>
-{{_('Dein Stein ist nun Teil unserer Reisesteinsammlung und auf unserer Weltkarte zu finden')}} (<a href="www.reisesteine.ethz.ch">www.reisesteine.ethz.ch</a>).
+{{_('Dein Stein ist nun Teil unserer Reisesteinsammlung und auf unserer Weltkarte zu finden')}} (<a href="https://reisesteine.ethz.ch">www.reisesteine.ethz.ch</a>).
 <br/><br/>
 {{_('Herzliche Grüsse')}},<br/>
 {{_('Die <i>focus</i>&#8239;Terra-Reiseleitung')}}<br/>
@@ -11,7 +11,7 @@ Sonneggstrasse 5<br/>
 8092 Zürich<br/>
 Tel. +41 44 632 62 81<br/>
 info_focusterra@erdw.ethz.ch  <br/>
-<a href="www.focusterra.ethz.ch">www.focusterra.ethz.ch</a><br/>
+<a href="https://focusterra.ethz.ch">www.focusterra.ethz.ch</a><br/>
 <br/>
 {{_('Wir sind auch auf facebook zu finden!')}}<br/>
-<a href="www.facebook.com/focusTerra">www.facebook.com/focusTerra</a>
+<a href="https://facebook.com/focusTerra">www.facebook.com/focusTerra</a>
