--- a/project/blueprints/reisesteine/templates/reisesteine/email/stone_submitted.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/email/stone_submitted.html
@@ -11,7 +11,7 @@ Sonneggstrasse 5<br/>
 8092 Zürich<br/>
 Tel. +41 44 632 62 81<br/>
 info_focusterra@erdw.ethz.ch  <br/>
-<a href="www.focusterra.ethz.ch">www.focusterra.ethz.ch</a><br/>
+<a href="https://focusterra.ethz.ch">www.focusterra.ethz.ch</a><br/>
 <br/>
 {{_('Wir sind auch auf facebook zu finden!')}}<br/>
-<a href="www.facebook.com/focusTerra">www.facebook.com/focusTerra</a>
+<a href="https://facebook.com/focusTerra">www.facebook.com/focusTerra</a>
