--- a/project/static/css/main.css
+++ b/project/static/css/main.css
@@ -27,6 +27,10 @@ body.rs-frontend {
     padding: 0;
 }
 
+svg {
+    will-change: transform;
+}
+
 @media only screen and (max-width: 1025px) {
     #rs-body {
         position: absolute;
@@ -194,10 +198,6 @@ h4.active {
     width: 100vw;
 }
 
-.rs-content>* {
-    will-change: transform;
-}
-
 .rs-content .rs-coordinates {
     position: absolute;
     top: 20vh;
@@ -263,6 +263,7 @@ h4.active {
 
 .rs-content .rs-fundort {
     cursor: pointer;
+    will-change: transform;
 }
 
 .rs-content .rs-fundort.active {
@@ -878,7 +879,7 @@ h4.active {
 }
 
 .rs-fundort-grid.is-loading {
-    min-height: 300px;
+    /* min-height: 300px; */
     background-position: center center;
     background-repeat: no-repeat;
     background-color: black;
