feat: update für fast forward competition

--- a/project/blueprints/reisesteine/templates/reisesteine/about.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/about.html
@@ -39,6 +39,9 @@
     <div id="rs-about">
         <h1>{{_('Über REISESTEINE')}}</h1>
         <p>
+            {{_('Teilnahme am Wettbewerb <a href="http://www.fastforwardscience.de" target="_blank">Fast Forward Science 2021/22</a>')}}
+        </p>
+        <p>
             {{_('Werden Sie auch immer wieder von Reiselust gepackt und der Sehnsucht, in die Welt hinauszuziehen? Reisen Sie mit Ihren Steinen ans Ende der Welt oder in Ihren Vorgarten. Die Ausstellung ist eine virtuelle Sammlung Ihrer Lieblingssteine von irgendwo auf der Welt und Ihrer Geschichte, die Sie damit verbinden. Entdecken Sie in der Ausstellung mehr über unsere gemeinsam erstellte Steinsammlung, ihre Fundorte und lernen Sie die damit verbundenen persönlichen und geologischen Geschichten kennen.')}}
         </p>
         <p>
