--- a/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
+++ b/project/blueprints/reisesteine/templates/reisesteine/mitmachen.html
@@ -36,6 +36,9 @@
                     {{_('Wir freuen uns auf Ihre Reisesteine!')}}
                 </p>
                 <p>
+                    {{_('Hier finden Sie eine Anleitung:')}} <a href="https://youtu.be/AGX36kK1o2A" target="_blank">https://youtu.be/AGX36kK1o2A</a>
+                </p>
+                <p>
                     <small class="text-muted form-text">
                         {{_('Bitte beachten Sie, dass in einigen Ländern und an einigen Orten die Mitnahme von Steinen aus der Natur verboten ist und unter Strafe steht. Bitte informieren Sie sich über die lokalen rechtlichen Vorgaben. Und auch dort, wo es erlaubt ist, darf dies nur in geringen Mengen und für den eigenen Gebrauch geschehen. Idealerweise nehmen Sie nur schöne Steinfotos mit. Die Mitnahme von bearbeiteten, antiken Gesteinen ist grundsätzlich untersagt.')}}
                     </small>
