--- a/project/templates/layouts/base.html
+++ b/project/templates/layouts/base.html
@@ -13,11 +13,12 @@
     {% block canonical %}{% endblock %}
 
     {% assets "css_bundle_backend" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}">
-    </link>
+    <link rel="stylesheet" href="{{ ASSET_URL }}" />
     {% endassets %}
 
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="rs-backend">
