--- a/project/templates/layouts/base_app.html
+++ b/project/templates/layouts/base_app.html
@@ -15,24 +15,29 @@
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{% block metadescription %}{% endblock %}">
+    <meta name="keywords"
+        content="{{_('Fast Forward Science, Webvideo-Wettbewerb, Wissenschaft, Science, Wissen, Wissenschaft im Dialog, Open Box Special')}}">
 
     <title>Home - Reisesteine</title>
     <link rel="icon" type="image/svg" href="{{ url_for('static', filename='img/favicon.svg')}}">
     {% block canonical %}{% endblock %}
 
     {% assets "css_bundle" %}
-    <link rel="stylesheet" href="{{ ASSET_URL }}">
-    </link>
+    <link rel="stylesheet" href="{{ ASSET_URL }}" />
     {% endassets %}
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+        integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+        crossorigin="" />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;700&family=Passion+One:wght@400;700&family=Sen&display=swap"
+        rel="stylesheet">
 </head>
 
 <body class="rs-frontend">
     {% include 'components/navigation.html' %}
-    {% block body %}
 
+    {% block body %}
     {% endblock %}
 
     {% assets "js_bundle" %}
